save user, role, fine tune other entities, password encoding