@@ -4,15 +4,17 @@ import com.example.fullstackforum.board.Board;
 import com.example.fullstackforum.board.BoardRepository;
 import com.example.fullstackforum.topic.Topic;
 import com.example.fullstackforum.topic.TopicRepository;
+import com.example.fullstackforum.user.ERole;
+import com.example.fullstackforum.user.Role;
+import com.example.fullstackforum.user.RoleRepository;
 import lombok.extern.slf4j.Slf4j;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import org.springframework.context.event.ContextRefreshedEvent;
 import org.springframework.context.event.EventListener;
 import org.springframework.stereotype.Component;
 
 import java.util.Arrays;
 import java.util.Date;
+import java.util.List;
 
 @Component
 @Slf4j
@@ -20,15 +22,46 @@ public class OnApplicationStartUp {
 
     private final BoardRepository boardRepository;
     private final TopicRepository topicRepository;
+    private final RoleRepository roleRepository;
 
-    public OnApplicationStartUp(BoardRepository boardRepository, TopicRepository topicRepository) {
+    public OnApplicationStartUp(
+            BoardRepository boardRepository,
+            TopicRepository topicRepository,
+            RoleRepository roleRepository
+    ) {
         this.boardRepository = boardRepository;
         this.topicRepository = topicRepository;
+        this.roleRepository = roleRepository;
     }
 
     @EventListener
     public void onApplicationEvent(ContextRefreshedEvent event) {
+        initializeAppData();
+        saveMockUpData();
+    }
 
+    private void initializeAppData() {
+        log.info("Initializing db with user roles");
+
+        var userRole = new Role(1L, ERole.ROLE_USER);
+        var moderatorRole = new Role(2L, ERole.ROLE_MODERATOR);
+        var adminRole = new Role(3L, ERole.ROLE_ADMIN);
+
+        if (!roleRepository.existsById(userRole.getId())) {
+            roleRepository.save(userRole);
+        }
+
+        if (!roleRepository.existsById(moderatorRole.getId())) {
+            roleRepository.save(moderatorRole);
+        }
+
+        if (!roleRepository.existsById(adminRole.getId())) {
+            roleRepository.save(adminRole);
+        }
+    }
+
+
+    private void saveMockUpData() {
         if (!boardRepository.findAll().isEmpty()) {
             log.info("Board repository not empty, skipping data initialization");
             return;
@@ -58,7 +91,7 @@ public class OnApplicationStartUp {
 
         var dbTopic = topicRepository.save(topic1);
 
-        firstDbBoard.setTopics(Arrays.asList(dbTopic));
+        firstDbBoard.setTopics(List.of(dbTopic));
 
         boardRepository.save(firstDbBoard);
     }
